--- a/SensorProvider/src/main/res/values/strings.xml
+++ b/SensorProvider/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="ACC_X">X Acceleration</string>
     <string name="ACC_Y">Y Acceleration</string>
     <string name="ACC_Z">Z Acceleration</string>
+    <string name="GYRO_X">Gyro X</string>
+    <string name="GYRO_Y">Gyro Y</string>
+    <string name="GYRO_Z">Gyro Z</string>
 </resources>
